[package]
name = "terminal3d"
description = "View 3d models in your terminal"
repository = "https://github.com/liam-ilan/terminal3d"
readme = "README.md"
keywords = ["3d", "terminal", "t3d", "model", "obj"]
categories = ["command-line-utilities", "graphics", "visualization", "multimedia", "rendering"]
version = "0.0.2"
edition = "2021"
license = "MIT"

[dependencies]
crossterm = "0.28.1"

[[bin]]
name = "t3d"
path = "src/main.rs"